<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_movie_cover_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_image"
                android:scaleType="centerCrop"/>
        </FrameLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-110dp"
            android:padding="16dp">
            <ImageView
                android:id="@+id/img_movie_photo"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:scaleType="fitXY"
                android:contentDescription="@string/movie_image" />
            <TextView
                android:id="@+id/tv_movie_rating_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginTop="58dp"
                android:layout_toEndOf="@id/img_movie_photo"
                android:ellipsize="end"
                android:textSize="30sp"
                android:textStyle="bold"
                android:text="@string/_10"
                android:textColor="@android:color/black"
                android:background="@drawable/circle"/>
            <TextView
                android:id="@+id/tv_movie_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="110dp"
                android:layout_toEndOf="@id/img_movie_photo"
                android:text="@string/rating"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <RatingBar
                android:id="@+id/rb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="22dp"
                android:layout_toEndOf="@id/img_movie_photo"
                android:layout_below="@id/tv_movie_rating_title"
                style="?android:attr/ratingBarStyleIndicator"
                android:numStars="5"
                android:stepSize="0.1"
                android:isIndicator="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="2dp"
            android:paddingStart="26dp"
            android:paddingEnd="26dp"
            android:paddingBottom="26dp">
            <TextView
                android:id="@+id/tv_movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_name"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/tv_movie_directed_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_movie_name"
                android:textSize="14sp"
                android:ellipsize="end"
                android:text="@string/directed_by"
                android:textColor="@color/colorText"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_movie_directed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_movie_name"
                android:layout_toEndOf="@+id/tv_movie_directed_by"
                android:textSize="14sp"
                android:ellipsize="end"
                android:text="@string/movie_directed"
                android:textColor="@color/colorText"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_movie_genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tv_movie_directed_by"
                android:text="@string/genre"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/tv_movie_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_movie_genre_title"
                android:text="@string/movie_genre"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_movie_synopsis_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/tv_movie_genre"
                android:text="@string/synopsis"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/tv_movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/tv_movie_synopsis_title"
                android:text="@string/description_movie"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>